first data test - home interface test

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -28,7 +29,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
     <!-- CONTROLLERS -->
     <script src="js/controllers/appCtrl.js"></script>
@@ -36,7 +37,7 @@
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/homeCtrl.js"></script>
     <!-- SERVICES -->
-    <script src="js/services/authService.js"></script>
+    <script src="js/services/firebaseService.js"></script>
 
   </head>
 
